Cuarto commit practicas condicionales

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /NuevoProyectoPractica/nbproject/private/
 /NuevoProyectoPractica/build/
+/CondicionalesJava/nbproject/private/
+/CondicionalesJava/build/
