--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /NuevoProyectoPractica/build/
 /CondicionalesJava/nbproject/private/
 /CondicionalesJava/build/
+/EstructurasRepetitivas/nbproject/private/
+/Ejemplo Java Intro/EjemploSentenciasSalto/build/
+/EstructurasRepetitivas/build/
+/EstructurasRepetitivas(do-while)/nbproject/private/
+/EstructurasRepetitivas(do-while)/build/
+/EstructurasRepetitivas FOR/nbproject/private/
+/EstructurasRepetitivas FOR/build/
