Cuarta mañana acompañado de java

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@
 /EstructurasRepetitivas(do-while)/build/
 /EstructurasRepetitivas FOR/nbproject/private/
 /EstructurasRepetitivas FOR/build/
+/SubProgramasFunciones/nbproject/private/
+/SubProgramasFunciones/build/
+/SubProgramasProcedimientos/nbproject/private/
+/SubProgramasProcedimientos/build/
+/Arreglos/nbproject/private/
+/Arreglos/build/
+/VectoresYMatricesEnSubprogramas/nbproject/private/
