--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,24 @@
 /Arreglos/nbproject/private/
 /Arreglos/build/
 /VectoresYMatricesEnSubprogramas/nbproject/private/
+/Ejercicio1/nbproject/private/
+/Ejercicio1/build/
+/Ejercicios2Y3/nbproject/private/
+/Ejercicios2Y3/build/
+/Ejercicio4/nbproject/private/
+/Ejercicio4/build/
+/Ejercicio5/nbproject/private/
+/Ejercicio5/build/
+/Ejercicio6/nbproject/private/
+/Ejercicio6/build/
+/Ejercicio7/nbproject/private/
+/Ejercicio7/build/
+/Ejercicio8/nbproject/private/
+/Ejercicio8/build/
+/Ejercicio9/nbproject/private/
+/Ejercicio9/build/
+/Ejercicio10/nbproject/private/
+/Ejercicio10/build/
+/Ejercicio11/nbproject/private/
+/Ejercicio11/build/
+/Ejercicio12/nbproject/private/
