ya casi terminamos

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,12 @@
 /Ejercicio11/nbproject/private/
 /Ejercicio11/build/
 /Ejercicio12/nbproject/private/
+/Ejercicio12/build/
+/Ejercicio13/nbproject/private/
+/Ejercicio13/build/
+/Ejercicio14/nbproject/private/
+/Ejercicio14/build/
+/Ejercicio15/nbproject/private/
+/Ejercicio15/build/
+/Ejercicio16/nbproject/private/
+/Ejercicio16/build/
